--- a/01_Extraction.ipynb
+++ b/01_Extraction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "474a2cd8-939d-4de9-9ee0-a58816fb6ffa",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "b487842e-19f6-49a5-a207-3216ffebdf02",
    "metadata": {},
    "outputs": [],
@@ -34,13 +34,14 @@
     "\n",
     "downloads = {\n",
     "    \"FRONTUR_DL\": \"https://dataestur.azure-api.net/API-SEGITTUR-v1/FRONTUR_DL?desde%20%28a%C3%B1o%29=2018&Pa%C3%ADs%20de%20residencia=Todos&Tipo%20de%20visitante=Todos&CCAA%20de%20destino=Todos\",\n",
-    "    \"EGATUR_DL\": \"https://dataestur.azure-api.net/API-SEGITTUR-v1/EGATUR_DL?desde%20%28a%C3%B1o%29=2018&Pa%C3%ADs%20de%20residencia=Todos&CCAA%20de%20destino=Todos\"\n",
+    "    \"EGATUR_DL\": \"https://dataestur.azure-api.net/API-SEGITTUR-v1/EGATUR_DL?desde%20%28a%C3%B1o%29=2018&Pa%C3%ADs%20de%20residencia=Todos&CCAA%20de%20destino=Todos\",\n",
+    "    \"ACTIVIDADES_OCIO_DL\": \"https://dataestur.azure-api.net/API-SEGITTUR-v1/ACTIVIDADES_OCIO_DL?CCAA=Todos&Provincia=Todos\"\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "4e802ea6-ba2c-469d-aeb0-87d56fb515f7",
    "metadata": {},
    "outputs": [],
@@ -69,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "8df69d2b-82a4-45f3-8630-9031905621d5",
    "metadata": {},
    "outputs": [
@@ -77,8 +78,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "⏭️  FRONTUR_DL.xlsx already exists. Skipping download.\n",
-      "⏭️  EGATUR_DL.xlsx already exists. Skipping download.\n"
+      "⏭️  FRONTUR_DL.xlsx already exists.\n",
+      "⏭️  EGATUR_DL.xlsx already exists.\n",
+      "ACTIVIDADES_OCIO_DL.xlsx downloaded and saved.\n"
      ]
     }
    ],
@@ -95,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "id": "5ac71938-0b9c-4adb-afba-7fd4465dc0c5",
    "metadata": {},
    "outputs": [
@@ -123,7 +125,20 @@
       "  CCAA_DESTINO  PERNOCTACIONES  GASTO_TOTAL  \n",
       "0    Andalucía               0    306434.84  \n",
       "1     Canarias               0  14063908.66  \n",
-      "2     Cataluña               0    549930.72  \n"
+      "2     Cataluña               0    549930.72  \n",
+      "\n",
+      " ACTIVIDADES_OCIO_DL\n",
+      "Columns: ['AÑO', 'MES', 'PRODUCTO', 'CATEGORIA', 'CCAA', 'PROVINCIA', 'ENTRADAS', 'VISITAS_PAGINAS', 'GASTO_TOTAL', 'PRECIO_MEDIO_ENTRADA', 'TRANSACCIONES']\n",
+      "First 3 rows:\n",
+      "     AÑO  MES      PRODUCTO                CATEGORIA        CCAA    PROVINCIA  \\\n",
+      "0  2023    7  Espectaculos  Cultura, teatro y danza  País Vasco  Araba/Álava   \n",
+      "1  2023    7  Espectaculos  Cultura, teatro y danza  País Vasco  Araba/Álava   \n",
+      "2  2023    7  Espectaculos                   Música  País Vasco  Araba/Álava   \n",
+      "\n",
+      "   ENTRADAS  VISITAS_PAGINAS  GASTO_TOTAL  PRECIO_MEDIO_ENTRADA  TRANSACCIONES  \n",
+      "0        35              135       420.00                 12.00             12  \n",
+      "1         2                8         6.46                  3.23              1  \n",
+      "2       310             4171      3357.30                 10.83            153  \n"
      ]
     }
    ],
@@ -250,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "id": "1075dcb1-3c03-4da0-9d8c-e6b1e8d85f3b",
    "metadata": {},
    "outputs": [
@@ -277,92 +292,124 @@
        "      <th></th>\n",
        "      <th>AÑO</th>\n",
        "      <th>MES</th>\n",
-       "      <th>PAIS_RESIDENCIA</th>\n",
-       "      <th>TIPO_VISITANTE</th>\n",
-       "      <th>CCAA_DESTINO</th>\n",
-       "      <th>PERNOCTACIONES</th>\n",
+       "      <th>PRODUCTO</th>\n",
+       "      <th>CATEGORIA</th>\n",
+       "      <th>CCAA</th>\n",
+       "      <th>PROVINCIA</th>\n",
+       "      <th>ENTRADAS</th>\n",
+       "      <th>VISITAS_PAGINAS</th>\n",
        "      <th>GASTO_TOTAL</th>\n",
+       "      <th>PRECIO_MEDIO_ENTRADA</th>\n",
+       "      <th>TRANSACCIONES</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2018</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Alemania</td>\n",
-       "      <td>Excursionista no residente (no tránsito)</td>\n",
-       "      <td>Andalucía</td>\n",
-       "      <td>0</td>\n",
-       "      <td>306434.84</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Espectaculos</td>\n",
+       "      <td>Cultura, teatro y danza</td>\n",
+       "      <td>País Vasco</td>\n",
+       "      <td>Araba/Álava</td>\n",
+       "      <td>35</td>\n",
+       "      <td>135</td>\n",
+       "      <td>420.00</td>\n",
+       "      <td>12.00</td>\n",
+       "      <td>12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2018</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Espectaculos</td>\n",
+       "      <td>Cultura, teatro y danza</td>\n",
+       "      <td>País Vasco</td>\n",
+       "      <td>Araba/Álava</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>6.46</td>\n",
+       "      <td>3.23</td>\n",
        "      <td>1</td>\n",
-       "      <td>Alemania</td>\n",
-       "      <td>Excursionista no residente (no tránsito)</td>\n",
-       "      <td>Canarias</td>\n",
-       "      <td>0</td>\n",
-       "      <td>14063908.66</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2018</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Alemania</td>\n",
-       "      <td>Excursionista no residente (no tránsito)</td>\n",
-       "      <td>Cataluña</td>\n",
-       "      <td>0</td>\n",
-       "      <td>549930.72</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Espectaculos</td>\n",
+       "      <td>Música</td>\n",
+       "      <td>País Vasco</td>\n",
+       "      <td>Araba/Álava</td>\n",
+       "      <td>310</td>\n",
+       "      <td>4171</td>\n",
+       "      <td>3357.30</td>\n",
+       "      <td>10.83</td>\n",
+       "      <td>153</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2018</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Alemania</td>\n",
-       "      <td>Excursionista no residente (no tránsito)</td>\n",
-       "      <td>Illes Balears</td>\n",
-       "      <td>0</td>\n",
-       "      <td>956234.72</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Actividades</td>\n",
+       "      <td>Actividades infantiles</td>\n",
+       "      <td>País Vasco</td>\n",
+       "      <td>Araba/Álava</td>\n",
+       "      <td>39</td>\n",
+       "      <td>151</td>\n",
+       "      <td>207.87</td>\n",
+       "      <td>5.33</td>\n",
+       "      <td>17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2018</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Alemania</td>\n",
-       "      <td>Excursionista no residente en tránsito</td>\n",
-       "      <td>Transito</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3847358.72</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Espectaculos</td>\n",
+       "      <td>Cultura, teatro y danza</td>\n",
+       "      <td>País Vasco</td>\n",
+       "      <td>Araba/Álava</td>\n",
+       "      <td>290</td>\n",
+       "      <td>1123</td>\n",
+       "      <td>2726.00</td>\n",
+       "      <td>9.40</td>\n",
+       "      <td>124</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    AÑO  MES PAIS_RESIDENCIA                            TIPO_VISITANTE  \\\n",
-       "0  2018    1        Alemania  Excursionista no residente (no tránsito)   \n",
-       "1  2018    1        Alemania  Excursionista no residente (no tránsito)   \n",
-       "2  2018    1        Alemania  Excursionista no residente (no tránsito)   \n",
-       "3  2018    1        Alemania  Excursionista no residente (no tránsito)   \n",
-       "4  2018    1        Alemania    Excursionista no residente en tránsito   \n",
+       "    AÑO  MES      PRODUCTO                CATEGORIA        CCAA    PROVINCIA  \\\n",
+       "0  2023    7  Espectaculos  Cultura, teatro y danza  País Vasco  Araba/Álava   \n",
+       "1  2023    7  Espectaculos  Cultura, teatro y danza  País Vasco  Araba/Álava   \n",
+       "2  2023    7  Espectaculos                   Música  País Vasco  Araba/Álava   \n",
+       "3  2023    7   Actividades   Actividades infantiles  País Vasco  Araba/Álava   \n",
+       "4  2023    7  Espectaculos  Cultura, teatro y danza  País Vasco  Araba/Álava   \n",
        "\n",
-       "    CCAA_DESTINO  PERNOCTACIONES  GASTO_TOTAL  \n",
-       "0      Andalucía               0    306434.84  \n",
-       "1       Canarias               0  14063908.66  \n",
-       "2       Cataluña               0    549930.72  \n",
-       "3  Illes Balears               0    956234.72  \n",
-       "4       Transito               0   3847358.72  "
+       "   ENTRADAS  VISITAS_PAGINAS  GASTO_TOTAL  PRECIO_MEDIO_ENTRADA  TRANSACCIONES  \n",
+       "0        35              135       420.00                 12.00             12  \n",
+       "1         2                8         6.46                  3.23              1  \n",
+       "2       310             4171      3357.30                 10.83            153  \n",
+       "3        39              151       207.87                  5.33             17  \n",
+       "4       290             1123      2726.00                  9.40            124  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "datasets[\"EGATUR_DL\"].head()"
+    "datasets[\"ACTIVIDADES_OCIO_DL\"].head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf450279-fc2d-403d-ac0c-4a861bbdedff",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
