--- a/01_Extraction.ipynb
+++ b/01_Extraction.ipynb
@@ -53,7 +53,7 @@
     "    file_path = os.path.join(folder, f\"{file_name}.xlsx\")\n",
     "\n",
     "    if os.path.exists(file_path):\n",
-    "        print(f\"⏭️  {file_name}.xlsx already exists.\")\n",
+    "        print(f\"- {file_name}.xlsx already exists.\")\n",
     "        return pd.read_excel(file_path)\n",
     "\n",
     "    response = requests.get(url)\n",
