Extraction done. Base for Transformation started

--- a/05_Storytelling.ipynb
+++ b/05_Storytelling.ipynb
@@ -35,14 +35,17 @@
     "\n",
     "## Preguntas que buscamos responder\n",
     "- ¿Crece el turismo de experiencias vs. turismo tradicional?\n",
-    "\n",
     "- ¿La duración del viaje ha aumentado frente a antes de la pandemia?\n",
-    "\n",
     "- ¿Qué tipos de experiencias atraen más (eventos, naturaleza, cultura, gastronomía, bienestar)?\n",
-    "\n",
-    "- ¿Están los turistas dispuestos a pagar más por opciones sostenibles y auténticas?\n",
-    "\n",
     "- ¿Cómo se mueve el turismo internacional vs. nacional en comunidades más “experimentales”?\n",
+    "\n",
+    "### ¿Están los turistas dispuestos a pagar más por opciones sostenibles y auténticas?\n",
+    "> ¿Qué se entiende por sostenible y auténtico?\n",
+    "\n",
+    "- Alojamientos rurales (casas rurales, campings, viviendas de uso turístico)\n",
+    "- Motivación del viaje: naturaleza, cultura, gastronomía local\n",
+    "- Destino: zonas rurales o poco masificadas, parques naturales\n",
+    "- Duración del viaje: estancias más largas suelen asociarse a turismo más consciente\n",
     "\n",
     "## Tendencias a medir:\n",
     "- Experiencial vs tradicional: crecimiento de viajes orientados a eventos, cultura, naturaleza.\n",
