--- a/02_Transform.ipynb
+++ b/02_Transform.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "9ed34ae5-cddf-4b7f-9200-74e631d9f698",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import os"
+    "import os\n",
+    "import numpy as np"
    ]
   },
   {
