Evolucion tipo de visitantes por ccaa

--- a/05_Storytelling.ipynb
+++ b/05_Storytelling.ipynb
@@ -42,10 +42,18 @@
     "### ¿Están los turistas dispuestos a pagar más por opciones sostenibles y auténticas?\n",
     "> ¿Qué se entiende por sostenible y auténtico?\n",
     "\n",
-    "- Alojamientos rurales (casas rurales, campings, viviendas de uso turístico)\n",
-    "- Motivación del viaje: naturaleza, cultura, gastronomía local\n",
-    "- Destino: zonas rurales o poco masificadas, parques naturales\n",
-    "- Duración del viaje: estancias más largas suelen asociarse a turismo más consciente\n",
+    "1. Alojamientos rurales (casas rurales, campings, viviendas de uso turístico)\n",
+    "2. Motivación del viaje: naturaleza, cultura, gastronomía local\n",
+    "3. Destino: zonas rurales o poco masificadas, parques naturales\n",
+    "4. Duración del viaje: estancias más largas suelen asociarse a turismo más consciente\n",
+    "\n",
+    "| Criterio            | Indicador                             | Dato                            |\n",
+    "| ------------------- | ------------------------------------- | ------------------------------- |\n",
+    "| Destino auténtico   | Zonas de interior o poco masificadas  | `CCAA_DESTINO` ≠ costa clásica  |\n",
+    "| Tipo de alojamiento | Turismo rural, camping, casas rurales | en datos de ocupación turística |\n",
+    "| Motivación          | Cultura, naturaleza, gastronomía      | `TIPO_VIAJE`, `TIPO_VISITANTE`  |\n",
+    "| Duración            | Estancias largas = turismo consciente | `DURACION`, `ESTANCIA_MEDIA`    |\n",
+    "| Gasto               | Gasto diario/persona mayor            | `GASTO_DIARIO`, `GASTO_TOTAL`   |\n",
     "\n",
     "## Tendencias a medir:\n",
     "- Experiencial vs tradicional: crecimiento de viajes orientados a eventos, cultura, naturaleza.\n",
