--- a/.virtual_documents/01_Extraction.ipynb
+++ b/.virtual_documents/01_Extraction.ipynb
@@ -2,6 +2,7 @@ import requests
 import pandas as pd
 from io import BytesIO
 import os
+from io import StringIO
 
 
 # https://www.dataestur.es/en/apidata/
@@ -12,27 +13,43 @@ import os
 downloads = {
     "FRONTUR_DL": "https://dataestur.azure-api.net/API-SEGITTUR-v1/FRONTUR_DL?desde%20%28a%C3%B1o%29=2018&Pa%C3%ADs%20de%20residencia=Todos&Tipo%20de%20visitante=Todos&CCAA%20de%20destino=Todos",
     "EGATUR_DL": "https://dataestur.azure-api.net/API-SEGITTUR-v1/EGATUR_DL?desde%20%28a%C3%B1o%29=2018&Pa%C3%ADs%20de%20residencia=Todos&CCAA%20de%20destino=Todos",
-    "ACTIVIDADES_OCIO_DL": "https://dataestur.azure-api.net/API-SEGITTUR-v1/ACTIVIDADES_OCIO_DL?CCAA=Todos&Provincia=Todos"
+    "ACTIVIDADES_OCIO_DL": "https://dataestur.azure-api.net/API-SEGITTUR-v1/ACTIVIDADES_OCIO_DL?CCAA=Todos&Provincia=Todos",
+    "TRANSPORTE_TERRESTRE_DL": "https://dataestur.azure-api.net/API-SEGITTUR-v1/TRANSPORTE_TERRESTRE_DL?desde%20%28a%C3%B1o%29=2018&Tipo%20transporte=Todos",
+    "CONECTIVIDAD_AEREA_BUSQUEDAS_INICIO_VIAJE_DL": "https://dataestur.azure-api.net/API-SEGITTUR-v1/CONECTIVIDAD_AEREA_BUSQUEDAS_INICIO_VIAJE_DL?Pa%C3%ADs%20origen=Todos&Ciudad%20destino=Todos&Tipo%20origen=Todos",
+    "ESCUCHA_ACTIVA_DL": "https://dataestur.azure-api.net/API-SEGITTUR-v1/ESCUCHA_ACTIVA_DL?Idioma=Todos&Medio=Todos&Sentimiento=Todos",
+    "CST_GASTO_CONSUMO_TURISTICO_DL": "https://dataestur.azure-api.net/API-SEGITTUR-v1/CST_GASTO_CONSUMO_TURISTICO_DL?Producto=Todos",
+    "EOAC_CATEGORIA_DL": "https://dataestur.azure-api.net/API-SEGITTUR-v1/EOAC_CATEGORIA_DL?desde%20%28a%C3%B1o%29=2018&Categor%C3%ADa=Todos&Lugar%20de%20residencia=Todos",
+    "EOAL_PAIS_DL": "https://dataestur.azure-api.net/API-SEGITTUR-v1/EOAL_PAIS_DL?Pa%C3%ADs=Todos&Lugar%20de%20residencia=Todos",
+    "EOTR_PAIS_DL": "https://dataestur.azure-api.net/API-SEGITTUR-v1/EOTR_PAIS_DL?desde%20%28a%C3%B1o%29=2018&Pa%C3%ADs=Todos&Lugar%20de%20residencia=Todos"
 }
 
 
 # Creamos una función para descargar un diccionario de URLS. Para ello tenemos que pasarle la url y un nombre de archivo.
 # La descarga devuelve un tipo binario, así que usamos BytesIO y lo convertimos en Dataframe con Pandas.
 
-def download_excel(url, file_name, folder="./data"):
+def download_file(url, file_name, folder="./data"):
     file_path = os.path.join(folder, f"{file_name}.xlsx")
 
     if os.path.exists(file_path):
-        print(f"⏭️  {file_name}.xlsx already exists.")
+        print(f"- {file_name}.xlsx already exists.")
         return pd.read_excel(file_path)
 
     response = requests.get(url)
     
     if response.status_code == 200:
-        df = pd.read_excel(BytesIO(response.content))
-        df.to_excel(file_path, index=False)
-        print(f"{file_name}.xlsx downloaded and saved.")
-        return df
+        file_type = response.headers["Content-Disposition"].split(".")[-1]
+
+        if file_type == "xlsx":
+            df = pd.read_excel(BytesIO(response.content))
+            df.to_excel(file_path)
+            print(f"{file_name}.xlsx downloaded and saved.")
+            return df
+        elif file_type == "csv":
+            encoding = response.apparent_encoding
+            df = pd.read_csv(StringIO(response.content.decode(encoding)), sep=';', engine='python')
+            df.to_excel(file_path)
+            print(f"{file_name}.csv downloaded and saved.")
+            return df
     else:
         print(f"Failed to download {file_name}: {response.status_code}")
         return None
@@ -43,7 +60,7 @@ def download_excel(url, file_name, folder="./data"):
 datasets = {}
 
 for name, url in downloads.items():
-    df = download_excel(url, name)
+    df = download_file(url, name)
     if df is not None:
         datasets[name] = df
 
@@ -53,15 +70,6 @@ for name, url in downloads.items():
 for name, df in datasets.items():
     print(f"\n {name}")
     print("Columns:", df.columns.tolist())
-    print("First 3 rows:\n", df.head(3))
-
-
-# Para visualizar un archivo en concreto:
-
-datasets["FRONTUR_DL"].tail()
-
-
-datasets["EGATUR_DL"].head()
 
 
 
